--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "test": "mocha",
-    "migrate": "npx knex migrate:latest"
+    "migrate": "npx knex migrate:latest",
+    "postinstall": "knex migrate:rollback && knex migrate:latest"
   },
   "repository": {
     "type": "git",
